--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -823,75 +823,10 @@
     }
    ],
    "source": [
-    "def get_ap_vmax(ap_data, percent_up):\n",
-    "    time = ap_data['Time (s)']\n",
-    "    voltage = ap_data['Voltage (V)']\n",
-    "    time_begin = ap_data['Time (s)'].idxmin()\n",
-    "    ap_data_pre_max = ap_data[:(voltage.idxmax() - time_begin)]\n",
-    "    ap_data_post_max = ap_data[(voltage.idxmax() - time_begin):(voltage.idxmin() - time_begin)]\n",
-    "    voltage_start = voltage[time_begin]\n",
-    "    voltage_mid = ((voltage.max() - voltage_start) * percent_up) + voltage_start\n",
-    "    voltage_mid_loc = (ap_data_pre_max['Voltage (V)'] - voltage_mid).abs().idxmin()\n",
-    "\n",
-    "    return voltage_mid_loc\n",
-    "\n",
-    "\n",
-    "def plot_ap_vmax(ap_data, is_plotted=False):\n",
-    "    time = ap_data['Time (s)']\n",
-    "    voltage = ap_data['Voltage (V)']\n",
-    "\n",
-    "    time_start_50 = time.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    voltage_mid_50 = voltage.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    time_start_85 = time.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    voltage_mid_85 = voltage.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    time_start_25 = time.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "    voltage_mid_25 = voltage.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "\n",
-    "    if is_plotted:\n",
-    "        plt.plot(ap_data['Time (s)'], ap_data['Voltage (V)'])\n",
-    "        plt.plot([time_start_50], [voltage_mid_50], 'yo')\n",
-    "        plt.plot([time_start_85], [voltage_mid_85], 'yo')\n",
-    "        plt.plot([time_start_25], [voltage_mid_25], 'yo')\n",
-    "\n",
-    "\n",
-    "def draw_line(ap_data, is_plotted=False):\n",
-    "    time = ap_data['Time (s)']\n",
-    "    voltage = ap_data['Voltage (V)']\n",
-    "    time_start_50 = time.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    voltage_mid_50 = voltage.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    time_start_85 = time.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    voltage_mid_85 = voltage.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    time_start_25 = time.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "    voltage_mid_25 = voltage.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "\n",
-    "    x_number_values = [time_start_50, time_start_85, time_start_25]\n",
-    "    y_number_values = [voltage_mid_50, voltage_mid_85, voltage_mid_25]\n",
-    "    \n",
-    "    if is_plotted:\n",
-    "        plt.plot(x_number_values, y_number_values, linewidth=2)\n",
-    "        plt.xlabel('Time(s)')\n",
-    "        plt.ylabel('Voltage(V)')\n",
-    "        plt.show\n",
-    "    \n",
-    "\n",
-    "\n",
-    "def get_slope(ap_data):\n",
-    "    time = ap_data['Time (s)']\n",
-    "    voltage = ap_data['Voltage (V)']\n",
-    "    time_start_50 = time.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    voltage_mid_50 = voltage.loc[get_ap_vmax(ap_data, 0.5)]\n",
-    "    time_start_85 = time.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    voltage_mid_85 = voltage.loc[get_ap_vmax(ap_data, 0.85)]\n",
-    "    time_start_25 = time.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "    voltage_mid_25 = voltage.loc[get_ap_vmax(ap_data, 0.25)]\n",
-    "    \n",
-    "    m = (voltage_mid_85 - voltage_mid_25) / (time_start_85 - time_start_25)\n",
-    "    return m\n",
-    "\n",
     "plot_ap_vmax(single_ap, True)\n",
     "draw_line(single_ap, True)\n",
     "slope = get_slope(single_ap)\n",
-    "print('The maximum upstroke velocity (Vmax) is ' + str(slope) + ' volts/seconds')\n"
+    "print('The maximum upstroke velocity (Vmax) is ' + str(slope) + ' volts/seconds')"
    ]
   },
   {
