new functions rtxi

--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -798,6 +798,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 10. Calculate the maximum upstroke velocity (Vmax) of single action potentials\n",
+    "\n",
+    "The `plot_ap_vmax()`, `draw_line()`, and `get_slope()` functions will calculate the maximum upstroke velocity of single action potentials."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
