--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8. Automatically find single action potentials\n",
+    "#### 8. Find single action potentials\n",
     "\n",
     "The code below will find single action potentials for you and save them to the variable `sap` based on their location in the data. Set `ap_number` to the index of the action potential you would like to find. If you want the function to find a random action potential from anywhere in the data, set `ap_number` to `0`. If you don't want the function to plot the action potential, set `does_plot` to `False`."
    ]
@@ -194,7 +194,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Find a range of action potentials\n",
+    "#### 9. Plot all single action potentials\n",
+    "\n",
+    "This function below will create an interactive plot with a slider. Move the slider to plot different action potentials in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_sap_slider(recorded_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 10. Find a range of action potentials\n",
     "\n",
     "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
    ]
@@ -218,9 +236,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 10. Automatically find various action potentials\n",
+    "#### 11. Find various action potentials\n",
     "\n",
-    "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`. If you have `does_plot` set to `True`, it will also give you the index of the five action potentials being plotted."
+    "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
    ]
   },
   {
@@ -231,16 +249,15 @@
    },
    "outputs": [],
    "source": [
-    "ap_data = recorded_data\n",
     "does_plot = True\n",
-    "vaps = get_various_aps(ap_data, does_plot)"
+    "vaps = get_various_aps(recorded_data, does_plot)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 11. Smoothing single action potential data\n",
+    "#### 12. Smoothing single action potential data\n",
     "\n",
     "This code will smooth out the voltage in a dataframe with one action potential, and creaete a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The higher the `degree`, the smoother the end result will be. Set `does_plot` to `False` if you don't want it to plot the new dataframe."
    ]
@@ -263,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 12. Comparing two action potentials\n",
+    "#### 13. Comparing two action potentials\n",
     "\n",
     "The code below will give you the amplitude and duration of two action potentials, and graph those action potentials beow. Set `first_ap` and `second_ap` to the two action potentials you would like to compare."
    ]
@@ -285,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 13. Find the duration of action potentials\n",
+    "#### 14. Find the duration of action potentials\n",
     "\n",
     "This function finds the duration of a single action potential, and saves it to `apd`. To use it, set `single_ap_data` to the action potential data you want it to find the duration of. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want the function to plot the action potential and it's duration, set `does_plot` to `False`."
    ]
@@ -309,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 14. Find the amplitude of action potentials\n",
+    "#### 15. Find the amplitude of action potentials\n",
     "\n",
     "\n",
     "This function finds the amplitude of a single action potential, and saves it to `apa`. To use it, set `single_ap_data` to the action potential data you want it to find the amplitude of. If you don't want the function to plot the action potential and it's amplitude, set `does_plot` to `False`."
@@ -332,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 15. Find the shape factor of action potentials\n",
+    "#### 16. Find the shape factor of action potentials\n",
     "\n",
     "The code below finds the shape factor of an action potential and records it to `shape_factor`. Set `single_ap_data` to the action potential you want the shape factor of. If you don't want the function to plot the action potential and it's shape factor, set `does_plot` to `False`."
    ]
@@ -354,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 16. Find the maximum increase velocity of an action potential\n",
+    "#### 17. Find the maximum increase velocity of an action potential\n",
     "\n",
     "This function below will find the maximum increase velocity of an action potential and save it to the variable `vmax`. Set `single_ap_data` to the single action potential it will find the maximum velocity of. If you don't want the function to plot the action potential and it's maximum increase velocity, set `does_plot` to `False`."
    ]
@@ -376,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 17. Find all cycle lengths\n",
+    "#### 18. Find all cycle lengths\n",
     "\n",
     "The code below will search through the entire data set and create a list called `cycle_lengths` of all the cycle lengths of the action potentials. If you don't want it to make a graph of the cycle lengths, set `does_plot` to `False`."
    ]
@@ -397,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 18. Find all action potential durations\n",
+    "#### 19. Find all action potential durations\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apds` of the duration of every action potential. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want a graph of the durations, set `does_plot` to `False`."
    ]
@@ -420,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 19. Find all action potential amplitudes\n",
+    "#### 20. Find all action potential amplitudes\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apas` of the amplitude of every action potential. If you don't want a graph of the amplitudes, set `does_plot` to `False`."
    ]
@@ -434,7 +451,7 @@
    "outputs": [],
    "source": [
     "does_plot = True\n",
-    "all_apas = get_all_apas(recorded_data, does_plot)"
+    "all_apas = get_all_apas(smooth_ap_data(recorded_data,150), does_plot)"
    ]
   }
  ],
