added get_all_vmax and get_all_sfs

--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "#### 8. Get all single action potentials\n",
     "\n",
-    "Run the code below to get a list of all action potentials in the data."
+    "Run the code below to get a list of all action potentials in the data. The list will be saved to the variable `all_aps`."
    ]
   },
   {
@@ -190,9 +190,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8. Find single action potentials\n",
+    "#### 9. Find single action potentials\n",
     "\n",
-    "The code below will find single action potentials for you and save them to the variable `sap` based on their location in the data. Set `ap_number` to the index of the action potential you would like to find. If you want the function to find a random action potential from anywhere in the data, set `ap_number` to `0`. If you don't want the function to plot the action potential, set `does_plot` to `False`."
+    "The code below will find single action potentials for you and save them to the variable `sap` based on their location in the data. Set `ap_number` to the index of the action potential you would like to find. If you want the function to find a random action potential from anywhere in the data, set `ap_number` to `0`. If you want the function to plot the action potential, set `does_plot` to `True`."
    ]
   },
   {
@@ -203,7 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "ap_number = 17\n",
+    "ap_number = 16\n",
     "does_plot = True\n",
     "sap = get_single_ap(recorded_data, ap_number, does_plot)"
    ]
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Plot all single action potentials\n",
+    "#### 10. Plot all single action potentials\n",
     "\n",
     "This function below will create an interactive plot with a slider. Set `ap_data` to the data it will plot. It can work with either the initial DataFrame, but it will work faster if you run `get_all_saps` first and plug in `all_aps`. Move the slider to plot different action potentials in the data."
    ]
@@ -231,52 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 10. Find a range of action potentials\n",
-    "\n",
-    "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "split = False\n",
-    "first_ap = 5\n",
-    "last_ap = 10\n",
-    "does_plot = True\n",
-    "ap_range = get_ap_range(recorded_data, first_ap, last_ap, split, does_plot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 11. Find various action potentials\n",
-    "\n",
-    "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "does_plot = True\n",
-    "vaps = get_various_aps(recorded_data, does_plot)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 12. Smoothing single action potential data\n",
+    "#### 11. Smoothing single action potential data\n",
     "\n",
     "This code will smooth out the voltage in a dataframe with one action potential, and creaete a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The higher the `degree`, the smoother the end result will be. Set `does_plot` to `False` if you don't want it to plot the new dataframe."
    ]
@@ -299,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 13. Comparing two action potentials\n",
+    "#### 12. Comparing two action potentials\n",
     "\n",
     "The code below will give you the amplitude and duration of two action potentials, and graph those action potentials beow. Set `first_ap` and `second_ap` to the two action potentials you would like to compare."
    ]
@@ -321,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 14. Find the duration of action potentials\n",
+    "#### 13. Find the duration of action potentials\n",
     "\n",
     "This function finds the duration of a single action potential, and saves it to `apd`. To use it, set `single_ap_data` to the action potential data you want it to find the duration of. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want the function to plot the action potential and it's duration, set `does_plot` to `False`."
    ]
@@ -337,7 +292,7 @@
     "depolarization_percent = .5\n",
     "repolarization_percent = .9\n",
     "does_plot = True\n",
-    "single_ap_data = smooth_ap\n",
+    "single_ap_data = sap\n",
     "apd = get_ap_duration(single_ap_data, depolarization_percent, repolarization_percent, does_plot)"
    ]
   },
@@ -345,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 15. Find the amplitude of action potentials\n",
+    "#### 14. Find the amplitude of action potentials\n",
     "\n",
     "\n",
     "This function finds the amplitude of a single action potential, and saves it to `apa`. To use it, set `single_ap_data` to the action potential data you want it to find the amplitude of. If you don't want the function to plot the action potential and it's amplitude, set `does_plot` to `False`."
@@ -368,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 16. Find the shape factor of action potentials\n",
+    "#### 15. Find the shape factor of action potentials\n",
     "\n",
     "The code below finds the shape factor of an action potential and records it to `shape_factor`. Set `single_ap_data` to the action potential you want the shape factor of. If you don't want the function to plot the action potential and it's shape factor, set `does_plot` to `False`."
    ]
@@ -390,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 17. Find the maximum increase velocity of an action potential\n",
+    "#### 16. Find the maximum increase velocity of an action potential\n",
     "\n",
     "This function below will find the maximum increase velocity of an action potential and save it to the variable `vmax`. Set `single_ap_data` to the single action potential it will find the maximum velocity of. If you don't want the function to plot the action potential and it's maximum increase velocity, set `does_plot` to `False`."
    ]
@@ -412,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 18. Find all cycle lengths\n",
+    "#### 17. Find all cycle lengths\n",
     "\n",
     "The code below will search through the entire data set and create a list called `cycle_lengths` of all the cycle lengths of the action potentials. If you don't want it to make a graph of the cycle lengths, set `does_plot` to `False`."
    ]
@@ -433,9 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 19. Find all action potential durations\n",
+    "#### 18. Find all action potential durations\n",
     "\n",
-    "This code will search through all of the data and make a list called `all_apds` of the duration of every action potential. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want a graph of the durations, set `does_plot` to `False`. You need to run `get_all_saps` before you run this function."
+    "This code will search through all of the data and make a list called `all_apds` of the duration of every action potential. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
    ]
   },
   {
@@ -456,9 +411,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 20. Find all action potential amplitudes\n",
+    "#### 19. Find all action potential amplitudes\n",
     "\n",
-    "This code will search through all of the data and make a list called `all_apas` of the amplitude of every action potential. If you don't want a graph of the amplitudes, set `does_plot` to `False`. You need to run `get_all_saps` before this function."
+    "This code will search through all of the data and make a list called `all_apas` of the amplitude of every action potential. If you want a graph of the amplitudes, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
   },
   {
@@ -471,6 +426,85 @@
    "source": [
     "does_plot = True\n",
     "all_apas = get_all_apas(all_aps, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 20. Find all action potential shape factors\n",
+    "\n",
+    "This code will search through all of the data and make a list called `all_sfs` of the shape factor of every action potential. If you want a graph of the shape factors, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "does_plot = True\n",
+    "all_sfs = get_all_sfs(all_aps, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 21. Find all action potential maximum increase velocities\n",
+    "\n",
+    "This code will search through all of the data and make a list called `all_vmax` of the maximum increase velocity of every action potential. If you want a graph of the velocities, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "does_plot = True\n",
+    "all_vmax = get_all_vmax(all_aps, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 22. Find a range of action potentials\n",
+    "\n",
+    "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split = False\n",
+    "first_ap = 17\n",
+    "last_ap = 20\n",
+    "does_plot = True\n",
+    "ap_range = get_ap_range(recorded_data, first_ap, last_ap, split, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 23. Find various action potentials\n",
+    "\n",
+    "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "does_plot = True\n",
+    "vaps = get_various_aps(recorded_data, does_plot)"
    ]
   },
   {
