--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -172,9 +172,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 8. Get all single action potentials\n",
+    "#### 8. Get information on the data\n",
     "\n",
-    "Run the code below to get a list of all action potentials in the data. The list will be saved to the variable `all_aps`."
+    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`."
    ]
   },
   {
@@ -183,7 +183,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_aps = get_all_saps(recorded_data)"
+    "everything = get_everything(recorded_data_edited)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "everything = load_everything_dataframe('data/sap_summary_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 9. Get all single action potentials\n",
+    "\n",
+    "If you already have the data table with information on every action potential, you can quickly get a list of the DataFrame of every action potential with the first code block below. If you haven't ran the above code, you can still get this list with the `get_all_saps` function. The list will be saved to the variable `all_saps` either way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ap_data = recorded_data\n",
+    "data_table = everything\n",
+    "all_saps = get_saps_from_data_table(ap_data, data_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_saps = get_all_saps(recorded_data)"
    ]
   },
   {
@@ -203,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "ap_number = 16\n",
+    "ap_number = 2\n",
     "does_plot = True\n",
     "sap = get_single_ap(recorded_data, ap_number, does_plot)"
    ]
@@ -404,7 +442,28 @@
     "depolarization_percent = .5\n",
     "repolarization_percent = .9\n",
     "does_plot = True\n",
-    "all_apds = get_all_apds(all_aps, depolarization_percent, repolarization_percent, True)"
+    "all_apds = get_all_apds(all_saps, depolarization_percent, repolarization_percent, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 19. Get APDn - APDn+1\n",
+    "\n",
+    "The code below will create a list called `apdn_apdn1` of all the action potential durations compared to the following action potential duration. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "depolarization_percent = .5\n",
+    "repolarization_percent = .9\n",
+    "does_plot = True\n",
+    "apdn_apdn1 = get_apdn_apdn1(all_saps, depolarization_percent, repolarization_percent, does_plot)"
    ]
   },
   {
@@ -425,7 +484,7 @@
    "outputs": [],
    "source": [
     "does_plot = True\n",
-    "all_apas = get_all_apas(all_aps, does_plot)"
+    "all_apas = get_all_apas(all_saps, does_plot)"
    ]
   },
   {
@@ -444,7 +503,7 @@
    "outputs": [],
    "source": [
     "does_plot = True\n",
-    "all_sfs = get_all_sfs(all_aps, does_plot)"
+    "all_sfs = get_all_sfs(all_saps, does_plot)"
    ]
   },
   {
@@ -463,7 +522,7 @@
    "outputs": [],
    "source": [
     "does_plot = True\n",
-    "all_vmax = get_all_vmax(all_aps, does_plot)"
+    "all_vmax = get_all_vmax(all_saps, does_plot)"
    ]
   },
   {
@@ -520,15 +579,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recorded_data_edited = recorded_data.copy()[630000:]\n",
+    "recorded_data_edited = recorded_data.copy()[630000:1000000]\n",
+    "plot_single_ap(recorded_data_edited)\n",
     "\n",
     "def get_diastolic_intervals(ap_data):\n",
-    "    \n",
-    "    \n",
+    "    peaks = find_voltage_peaks(ap_data['Voltage (V)'])\n",
+    "    diastolic_intervals = []\n",
+    "    for x in range(len(peaks) - 1):\n",
+    "        max_to_max = (ap_data[peaks[x]:peaks[x+1]+500])\n",
+    "        max_to_max_volts = max_to_max.reset_index()['Voltage (V)']\n",
+    "        found_end = False\n",
+    "        found_start = False\n",
+    "        for x in range(len(max_to_max_volts)):\n",
+    "            if x + 500 < len(max_to_max_volts):\n",
+    "                if (max_to_max_volts[x] - max_to_max_volts[x + 500] < 0.003) and found_end == False:\n",
+    "                    end = x\n",
+    "                    found_end = True\n",
+    "                if (max_to_max_volts[x] - max_to_max_volts[x + 500] > 0.02) and found_end == True and found_start == False:\n",
+    "                    start = x\n",
+    "                    found_start = True\n",
+    "        time = max_to_max.reset_index()['Time (s)']\n",
+    "        diastolic_intervals.append(time[start] - time[end])\n",
+    "                \n",
     "    return diastolic_intervals\n",
     "\n",
-    "di = get_diastolic_intervals(recorded_data_edited)"
+    "di = get_diastolic_intervals(recorded_data_edited)\n",
+    "print(di)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_the_thing(ap_data, peak):\n",
+    "    cycle_length = len(ap_data)\n",
+    "    smoothed = np.convolve(ap_data['Voltage (V)'], np.ones((50,))/50, mode='valid')\n",
+    "    slope = np.convolve(np.diff(smoothed), np.ones((50,))/50, mode='valid')\n",
+    "    time_start = ap_data['Time (s)'].min()\n",
+    "    time_start_loc = ap_data['Time (s)'].idxmin()\n",
+    "    start = peak - int(cycle_length / 5) - int(time_start_loc)\n",
+    "    end = peak - int(cycle_length / 10) - int(time_start_loc)\n",
+    "    before_upslope = slope[start:end]\n",
+    "    print(np.average(before_upslope))\n",
+    "    plt.plot(before_upslope)\n",
+    "\n",
+    "ap = 15\n",
+    "sap1 = get_single_ap(recorded_data, ap + 1)\n",
+    "sap2 = get_single_ap(recorded_data, ap)\n",
+    "sap3 = get_single_ap(recorded_data, ap + 2)\n",
+    "peaks = find_voltage_peaks(recorded_data['Voltage (V)'])\n",
+    "do_the_thing(sap1, peaks[ap])\n",
+    "do_the_thing(sap2, peaks[ap - 1])\n",
+    "do_the_thing(sap3, peaks[ap + 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 50\n",
+    "\n",
+    "x = np.convolve(sap['Voltage (V)'], np.ones((N,))/N, mode='valid')\n",
+    "plt.plot(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes = everything['Class']\n",
+    "spont = []\n",
+    "for x in range(len(classes)):\n",
+    "    if classes[x] == 'Spontaneous':\n",
+    "        spont.append(x)\n",
+    "print(spont)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
