--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "everything = get_everything(recorded_data_edited)"
+    "everything = get_everything(recorded_data)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Find single action potentials\n",
+    "#### 10. Find single action potentials\n",
     "\n",
     "The code below will find single action potentials for you and save them to the variable `sap` based on their location in the data. Set `ap_number` to the index of the action potential you would like to find. If you want the function to find a random action potential from anywhere in the data, set `ap_number` to `0`. If you want the function to plot the action potential, set `does_plot` to `True`."
    ]
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 10. Plot all single action potentials\n",
+    "#### 11. Plot all single action potentials\n",
     "\n",
     "This function below will create an interactive plot with a slider. Set `ap_data` to the data it will plot. It can work with either the initial DataFrame, but it will work faster if you run `get_all_saps` first and plug in `all_aps`. Move the slider to plot different action potentials in the data."
    ]
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ap_data = all_aps\n",
+    "ap_data = all_saps\n",
     "plot_sap_slider(ap_data)"
    ]
   },
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 11. Smoothing single action potential data\n",
+    "#### 12. Smoothing single action potential data\n",
     "\n",
     "This code will smooth out the voltage in a dataframe with one action potential, and creaete a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The higher the `degree`, the smoother the end result will be. Set `does_plot` to `False` if you don't want it to plot the new dataframe."
    ]
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 12. Comparing two action potentials\n",
+    "#### 13. Comparing two action potentials\n",
     "\n",
     "The code below will give you the amplitude and duration of two action potentials, and graph those action potentials beow. Set `first_ap` and `second_ap` to the two action potentials you would like to compare."
    ]
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 13. Find the duration of action potentials\n",
+    "#### 14. Find the duration of action potentials\n",
     "\n",
     "This function finds the duration of a single action potential, and saves it to `apd`. To use it, set `single_ap_data` to the action potential data you want it to find the duration of. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want the function to plot the action potential and it's duration, set `does_plot` to `False`."
    ]
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 14. Find the amplitude of action potentials\n",
+    "#### 15. Find the amplitude of action potentials\n",
     "\n",
     "\n",
     "This function finds the amplitude of a single action potential, and saves it to `apa`. To use it, set `single_ap_data` to the action potential data you want it to find the amplitude of. If you don't want the function to plot the action potential and it's amplitude, set `does_plot` to `False`."
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 15. Find the shape factor of action potentials\n",
+    "#### 16. Find the shape factor of action potentials\n",
     "\n",
     "The code below finds the shape factor of an action potential and records it to `shape_factor`. Set `single_ap_data` to the action potential you want the shape factor of. If you don't want the function to plot the action potential and it's shape factor, set `does_plot` to `False`."
    ]
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 16. Find the maximum increase velocity of an action potential\n",
+    "#### 17. Find the maximum increase velocity of an action potential\n",
     "\n",
     "This function below will find the maximum increase velocity of an action potential and save it to the variable `vmax`. Set `single_ap_data` to the single action potential it will find the maximum velocity of. If you don't want the function to plot the action potential and it's maximum increase velocity, set `does_plot` to `False`."
    ]
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 17. Find all cycle lengths\n",
+    "#### 18. Find all cycle lengths\n",
     "\n",
     "The code below will search through the entire data set and create a list called `cycle_lengths` of all the cycle lengths of the action potentials. If you don't want it to make a graph of the cycle lengths, set `does_plot` to `False`."
    ]
@@ -426,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 18. Find all action potential durations\n",
+    "#### 19. Find all action potential durations\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apds` of the duration of every action potential. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
    ]
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 19. Get APDn - APDn+1\n",
+    "#### 20. Get APDn - APDn+1\n",
     "\n",
     "The code below will create a list called `apdn_apdn1` of all the action potential durations compared to the following action potential duration. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
    ]
@@ -470,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 19. Find all action potential amplitudes\n",
+    "#### 21. Find all action potential amplitudes\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apas` of the amplitude of every action potential. If you want a graph of the amplitudes, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -491,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 20. Find all action potential shape factors\n",
+    "#### 22. Find all action potential shape factors\n",
     "\n",
     "This code will search through all of the data and make a list called `all_sfs` of the shape factor of every action potential. If you want a graph of the shape factors, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -510,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 21. Find all action potential maximum increase velocities\n",
+    "#### 23. Find all action potential maximum increase velocities\n",
     "\n",
     "This code will search through all of the data and make a list called `all_vmax` of the maximum increase velocity of every action potential. If you want a graph of the velocities, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -529,7 +529,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 22. Find a range of action potentials\n",
+    "#### 24. Get all diastolic intervals\n",
+    "\n",
+    "This code below will find the diastolic intervals of every non-spontaneous action potential, and them to a list `di`. For spontaneous action potentials, the function will return `'NA'`.\n",
+    "If you want a plot of the diastolic intervals, set `does_plot` to `True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "does_plot = True\n",
+    "di = get_diastolic_intervals(recorded_data, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 25. Find a range of action potentials\n",
     "\n",
     "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
    ]
@@ -551,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 23. Find various action potentials\n",
+    "#### 26. Find various action potentials\n",
     "\n",
     "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
    ]
@@ -570,41 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "diastolic interval, restitution curve, apdn against apdn+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recorded_data_edited = recorded_data.copy()[630000:1000000]\n",
-    "plot_single_ap(recorded_data_edited)\n",
-    "\n",
-    "def get_diastolic_intervals(ap_data):\n",
-    "    peaks = find_voltage_peaks(ap_data['Voltage (V)'])\n",
-    "    diastolic_intervals = []\n",
-    "    for x in range(len(peaks) - 1):\n",
-    "        max_to_max = (ap_data[peaks[x]:peaks[x+1]+500])\n",
-    "        max_to_max_volts = max_to_max.reset_index()['Voltage (V)']\n",
-    "        found_end = False\n",
-    "        found_start = False\n",
-    "        for x in range(len(max_to_max_volts)):\n",
-    "            if x + 500 < len(max_to_max_volts):\n",
-    "                if (max_to_max_volts[x] - max_to_max_volts[x + 500] < 0.003) and found_end == False:\n",
-    "                    end = x\n",
-    "                    found_end = True\n",
-    "                if (max_to_max_volts[x] - max_to_max_volts[x + 500] > 0.02) and found_end == True and found_start == False:\n",
-    "                    start = x\n",
-    "                    found_start = True\n",
-    "        time = max_to_max.reset_index()['Time (s)']\n",
-    "        diastolic_intervals.append(time[start] - time[end])\n",
-    "                \n",
-    "    return diastolic_intervals\n",
-    "\n",
-    "di = get_diastolic_intervals(recorded_data_edited)\n",
-    "print(di)"
+    "restitution curve"
    ]
   },
   {
@@ -625,7 +611,7 @@
     "    print(np.average(before_upslope))\n",
     "    plt.plot(before_upslope)\n",
     "\n",
-    "ap = 15\n",
+    "ap = 379\n",
     "sap1 = get_single_ap(recorded_data, ap + 1)\n",
     "sap2 = get_single_ap(recorded_data, ap)\n",
     "sap3 = get_single_ap(recorded_data, ap + 2)\n",
@@ -646,27 +632,6 @@
     "x = np.convolve(sap['Voltage (V)'], np.ones((N,))/N, mode='valid')\n",
     "plt.plot(x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "classes = everything['Class']\n",
-    "spont = []\n",
-    "for x in range(len(classes)):\n",
-    "    if classes[x] == 'Spontaneous':\n",
-    "        spont.append(x)\n",
-    "print(spont)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
