--- a/process_rtxi.ipynb
+++ b/process_rtxi.ipynb
@@ -174,7 +174,7 @@
    "source": [
     "#### 8. Get information on the data\n",
     "\n",
-    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`."
+    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
    ]
   },
   {
@@ -183,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "everything = get_everything(recorded_data)"
+    "filename = 'sap_summary_data'\n",
+    "everything = get_everything(recorded_data, filename)"
    ]
   },
   {
@@ -192,7 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "everything = load_everything_dataframe('data/sap_summary_data.csv')"
+    "filename = 'sap_summary_data'\n",
+    "everything = load_everything_dataframe(filename)"
    ]
   },
   {
@@ -217,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 9. Get all single action potentials\n",
+    "#### 10. Get all single action potentials\n",
     "\n",
     "If you already have the data table with information on every action potential, you can quickly get a list of the DataFrame of every action potential with the first code block below. If you haven't ran the above code, you can still get this list with the `get_all_saps` function. The list will be saved to the variable `all_saps`."
    ]
@@ -246,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 10. Find single action potentials\n",
+    "#### 11. Find single action potentials\n",
     "\n",
     "The code below will find single action potentials for you and save them to the variable `sap` based on their location in the data. Set `ap_number` to the index of the action potential you would like to find. If you want the function to find a random action potential from anywhere in the data, set `ap_number` to `0`. If you want the function to plot the action potential, set `does_plot` to `True`."
    ]
@@ -268,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 11. Plot all single action potentials\n",
+    "#### 12. Plot all single action potentials\n",
     "\n",
     "This function below will create an interactive plot with a slider. Set `ap_data` to the data it will plot. It can work with either the initial DataFrame, but it will work faster if you run `get_all_saps` first and plug in `all_aps`. Move the slider to plot different action potentials in the data."
    ]
@@ -287,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 12. Smoothing single action potential data\n",
+    "#### 13. Smoothing single action potential data\n",
     "\n",
     "These two functions will smooth out the voltage in a dataframe with one action potential, and creaete a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The bigger the `window`, the smoother the end result will be. Set `does_plot` to `True` if you want it to plot the new dataframe."
    ]
@@ -300,7 +302,7 @@
    },
    "outputs": [],
    "source": [
-    "window = 100\n",
+    "degree = 100\n",
     "single_ap_data = sap\n",
     "does_plot = True\n",
     "smooth_ap = smooth_ap_data(single_ap_data, degree, does_plot)"
@@ -310,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 13. Comparing two action potentials\n",
+    "#### 14. Comparing two action potentials\n",
     "\n",
     "The code below will give you the amplitude and duration of two action potentials, and graph those action potentials beow. Set `first_ap` and `second_ap` to the two action potentials you would like to compare."
    ]
@@ -332,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 14. Find the duration of action potentials\n",
+    "#### 15. Find the duration of action potentials\n",
     "\n",
     "This function finds the duration of a single action potential, and saves it to `apd`. To use it, set `single_ap_data` to the action potential data you want it to find the duration of. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you don't want the function to plot the action potential and it's duration, set `does_plot` to `False`."
    ]
@@ -356,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 15. Find the amplitude of action potentials\n",
+    "#### 16. Find the amplitude of action potentials\n",
     "\n",
     "\n",
     "This function finds the amplitude of a single action potential, and saves it to `apa`. To use it, set `single_ap_data` to the action potential data you want it to find the amplitude of. If you don't want the function to plot the action potential and it's amplitude, set `does_plot` to `False`."
@@ -379,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 16. Find the shape factor of action potentials\n",
+    "#### 17. Find the shape factor of action potentials\n",
     "\n",
     "The code below finds the shape factor of an action potential and records it to `shape_factor`. Set `single_ap_data` to the action potential you want the shape factor of. If you don't want the function to plot the action potential and it's shape factor, set `does_plot` to `False`."
    ]
@@ -401,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 17. Find the maximum increase velocity of an action potential\n",
+    "#### 18. Find the maximum increase velocity of an action potential\n",
     "\n",
     "This function below will find the maximum increase velocity of an action potential and save it to the variable `vmax`. Set `single_ap_data` to the single action potential it will find the maximum velocity of. If you don't want the function to plot the action potential and it's maximum increase velocity, set `does_plot` to `False`."
    ]
@@ -423,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 18. Find all cycle lengths\n",
+    "#### 19. Find all cycle lengths\n",
     "\n",
     "The code below will search through the entire data set and create a list called `cycle_lengths` of all the cycle lengths of the action potentials. If you don't want it to make a graph of the cycle lengths, set `does_plot` to `False`."
    ]
@@ -444,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 19. Find all action potential durations\n",
+    "#### 20. Find all action potential durations\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apds` of the duration of every action potential. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
    ]
@@ -467,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 20. Get APDn - APDn+1\n",
+    "#### 21. Get APDn - APDn+1\n",
     "\n",
     "The code below will create a list called `apdn_apdn1` of all the action potential durations compared to the following action potential duration. Set `depolarization_percent` and `repolarization_percent` to the percentages (in decimals) you want the duration to be measured from. If you want a graph of the durations, set `does_plot` to `True`. You need to run `get_all_saps` before you run this function."
    ]
@@ -488,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 21. Find all action potential amplitudes\n",
+    "#### 22. Find all action potential amplitudes\n",
     "\n",
     "This code will search through all of the data and make a list called `all_apas` of the amplitude of every action potential. If you want a graph of the amplitudes, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -509,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 22. Find all action potential shape factors\n",
+    "#### 23. Find all action potential shape factors\n",
     "\n",
     "This code will search through all of the data and make a list called `all_sfs` of the shape factor of every action potential. If you want a graph of the shape factors, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -528,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 23. Find all action potential maximum increase velocities\n",
+    "#### 24. Find all action potential maximum increase velocities\n",
     "\n",
     "This code will search through all of the data and make a list called `all_vmax` of the maximum increase velocity of every action potential. If you want a graph of the velocities, set `does_plot` to `True`. You need to run `get_all_saps` before this function."
    ]
@@ -547,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 24. Get all diastolic intervals\n",
+    "#### 25. Get all diastolic intervals\n",
     "\n",
     "This code below will find the diastolic intervals of every non-spontaneous action potential, and them to a list `di`. For spontaneous action potentials, the function will return `'NA'`.\n",
     "If you want a plot of the diastolic intervals, set `does_plot` to `True`."
@@ -567,7 +569,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 25. Find a range of action potentials\n",
+    "#### 26. Find a range of action potentials\n",
     "\n",
     "The code below will find a range of single action potentials for you and save it to the variable `ap_range`. To have the function return a list of single action potential Dataframes, set `split` to `True`. If you want one Dataframe containing all the action potentials in the range, set `split` to `False`. Set `first_ap` to the index of the first action potential in the range, and set `last_ap` to the last action potential you want in the range. If you don't want the function to plot the action potentials, set `does_plot` to `False`."
    ]
@@ -589,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 26. Find various action potentials\n",
+    "#### 27. Find various action potentials\n",
     "\n",
     "The following code will find five various action potentials from different parts of the data, and save them all to the variable `vaps`. If you don't want it to plot the five action potentials, set `does_plot` to `False`."
    ]
