--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing RTXI H5 files into Python\n",
+    "#### 1. Load functions from load_h5.py\n",
     "\n",
-    "This Python notebook uses functions from **load_h5.py** to load RTXI data and process it into an easy-to-handle Python format. The **load_h5** module includes features to find single potentials, and save them to .csv files located at: **./data/{rtxi_filename}/{ap_label}.csv**.\n",
-    "\n",
-    "If you're interested in the implementation of the functions below, open **load_h5.py**. \n",
-    "\n",
-    "Let me know if you want to make changes/additions to **load_h5.py**, so we can setup a \n",
-    "collaborative workflow using GitHub.\n",
-    "#### 1. Load Functions from load_h5.py\n",
-    "\n",
-    "This Jupyter Notebook is in a directory that includes a file called **load_h5.py**. The **load_h5.py** file contains a few custom functions that I wrote to process the RTXI H5 file. Below, I use Python's `import` statement in the line `from load_h5 import *` to import all the functions from **load_h5.py**. "
+    "The function needed to import and analyze RTXI h5 files in Python are saved in the file **load_h5.py**. Use the code below to load them into this notebook."
    ]
   },
   {
@@ -32,9 +24,9 @@
    "source": [
     "#### 2. Set the file name and trial number\n",
     "\n",
-    "In the current directory, there should be a folder called **/data**. If you have not done so already, copy your .h5 file into this folder. Once you've done that, change the `filename` variable in the code below to:\n",
+    "In the current directory, create a folder called **data** and copy your .h5 file into this folder. Once you've done that, change the `filename` variable in the code below to the name of your file in the **data** folder (it should end in **.h5**) as follows:\n",
     "```\n",
-    "filename='data/YOUR_FILE_NAME.h5'\n",
+    "'YOUR_FILE_NAME.h5'\n",
     "```\n",
     "\n",
     "Set the `trial_number` variable to an integer that corresponds to your desired trial number. If you don't know your trial number, try a few out, starting from 1 and counting up. The code below will print the tags and plot voltage/current curves for the given trial. You can adjust the `trial_number` variable until you find the data you want."
@@ -46,15 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename='data/attempt_2_071519.h5'\n",
-    "trial_number=3\n",
-    "f=load_h5(filename)\n",
-    "\n",
-    "recorded_data=get_exp_as_df(f,trial_number)\n",
-    "tags=get_tags(f,trial_number)\n",
-    "\n",
-    "print(tags)\n",
-    "plot_V_and_I(recorded_data)"
+    "filename = 'attempt_2_071519.h5'\n",
+    "trial_number = 3\n",
+    "does_plot = True\n",
+    "recorded_data = load_recorded_data(filename, trial_number, does_plot)"
    ]
   },
   {
@@ -63,7 +50,7 @@
    "source": [
     "#### 3. Get information on the data\n",
     "\n",
-    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`."
+    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
    ]
   },
   {
@@ -72,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "everything = get_everything(recorded_data)"
+    "filename = 'sap_summary_data'\n",
+    "everything = get_everything(recorded_data, filename)"
    ]
   },
   {
@@ -81,7 +69,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "everything = load_everything_dataframe('data/sap_summary_data.csv')"
+    "filename = 'sap_summary_data'\n",
+    "everything = load_everything_dataframe(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Get classes\n",
+    "\n",
+    "After creating the data table, you can use it to find what kinds of action potentials are in your data. The code below will tell you how many APs of each class are in your data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "does_plot = True\n",
+    "class_tags = get_class_tags(recorded_data, everything, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Get all single action potentials\n",
+    "\n",
+    "If you already have the data table with information on every action potential, you can quickly get a list of the DataFrame of every action potential with the code below. The list will be saved to the variable `all_saps`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_saps = get_saps_from_data_table(recorded_data, everything)"
    ]
   }
  ],
