--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "#### 3. Get information on the data\n",
     "\n",
-    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the dataframe with the second block of code. The data table will be saved to the variable `everything`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
+    "The first block of code will create a DataFrame with lots of usefull information on the entire data set. If you've already run this code on the current data set, you can lode the DataFrame with the second block of code. The data table will be saved to the variable `everything`. It will also be saved to a new file in the **data** folder. Change `filename` to the what you would like the new file to be named."
    ]
   },
   {
@@ -109,6 +109,13 @@
    "source": [
     "all_saps = get_saps_from_data_table(recorded_data, everything)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
