--- a/process_rtxi_functions_list.ipynb
+++ b/process_rtxi_functions_list.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -292,7 +291,7 @@
    "source": [
     "#### 13. Smoothing single action potential data\n",
     "\n",
-    "These two functions will smooth out the voltage in a dataframe with one action potential, and creaete a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The bigger the `window`, the smoother the end result will be. Set `does_plot` to `True` if you want it to plot the new dataframe."
+    "This function will smooth out the voltage in a dataframe with one action potential, and create a new dataframe called `smooth_ap`. Set `single_ap_data` to the dataframe you want it to smooth. The higher the `degree`, the smoother the end result will be. Set `does_plot` to `True` if you want it to plot the new dataframe."
    ]
   },
   {
@@ -605,6 +604,21 @@
    "source": [
     "does_plot = True\n",
     "vaps = get_various_aps(recorded_data, does_plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_restitution_curve(data_table, percent_down):\n",
+    "    pop_it = []\n",
+    "    di_list = list(everything['Diastolic Intervals pre-AP (s)'])\n",
+    "    apd_list = list(everything[f'Duration {percent_down}% (s)'])\n",
+    "    plt.plot(apd_list,di_list)\n",
+    "\n",
+    "plot_restitution_curve(everything, '90')"
    ]
   }
  ],
