--- a/rtxi_processing_interface.ipynb
+++ b/rtxi_processing_interface.ipynb
@@ -111,11 +111,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Graph a column in the DataFrame\n",
+    "\n",
+    "This function will plot one column from the DataFrame. Set `column` equal to the column you want to plot (`'cycle lengths'`, `'diastolic intervals'`, `'duration 30'`, `'duration 40'`, `'duration 70'`, `'duration 80'`, `'duration 90'`, `'amplitude'`, `'mdp'`, `'shape factor'`, or `'dv/dt max'`)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "column = 'diastolic intervals'\n",
+    "graph_column(everything, column)"
+   ]
   }
  ],
  "metadata": {
